--- a/angular.json
+++ b/angular.json
@@ -1628,6 +1628,129 @@
             },
             "tags": []
         },
+        "survey": {
+            "projectType": "application",
+            "root": "apps/survey",
+            "sourceRoot": "apps/survey/src",
+            "prefix": "placeos",
+            "architect": {
+                "build": {
+                    "builder": "@angular-devkit/build-angular:browser",
+                    "outputs": ["{options.outputPath}"],
+                    "options": {
+                        "outputPath": "dist/apps/survey",
+                        "index": "apps/survey/src/index.html",
+                        "main": "apps/survey/src/main.ts",
+                        "polyfills": "apps/survey/src/polyfills.ts",
+                        "tsConfig": "apps/survey/tsconfig.app.json",
+                        "assets": [
+                            "apps/survey/src/favicon.ico",
+                            "apps/survey/src/assets"
+                        ],
+                        "styles": ["apps/survey/src/styles.css"],
+                        "scripts": []
+                    },
+                    "configurations": {
+                        "production": {
+                            "budgets": [
+                                {
+                                    "type": "initial",
+                                    "maximumWarning": "500kb",
+                                    "maximumError": "1mb"
+                                },
+                                {
+                                    "type": "anyComponentStyle",
+                                    "maximumWarning": "2kb",
+                                    "maximumError": "4kb"
+                                }
+                            ],
+                            "fileReplacements": [
+                                {
+                                    "replace": "apps/survey/src/environments/environment.ts",
+                                    "with": "apps/survey/src/environments/environment.prod.ts"
+                                }
+                            ],
+                            "outputHashing": "all"
+                        },
+                        "development": {
+                            "buildOptimizer": false,
+                            "optimization": false,
+                            "vendorChunk": true,
+                            "extractLicenses": false,
+                            "sourceMap": true,
+                            "namedChunks": true
+                        }
+                    },
+                    "defaultConfiguration": "production"
+                },
+                "serve": {
+                    "builder": "@angular-devkit/build-angular:dev-server",
+                    "configurations": {
+                        "production": {
+                            "browserTarget": "survey:build:production"
+                        },
+                        "development": {
+                            "browserTarget": "survey:build:development"
+                        }
+                    },
+                    "defaultConfiguration": "development"
+                },
+                "extract-i18n": {
+                    "builder": "@angular-devkit/build-angular:extract-i18n",
+                    "options": {
+                        "browserTarget": "survey:build"
+                    }
+                },
+                "lint": {
+                    "builder": "@nrwl/linter:eslint",
+                    "options": {
+                        "lintFilePatterns": [
+                            "apps/survey/**/*.ts",
+                            "apps/survey/**/*.html"
+                        ]
+                    }
+                },
+                "test": {
+                    "builder": "@nrwl/jest:jest",
+                    "outputs": ["coverage/apps/survey"],
+                    "options": {
+                        "jestConfig": "apps/survey/jest.config.ts",
+                        "passWithNoTests": true
+                    }
+                }
+            },
+            "tags": []
+        },
+        "survey-e2e": {
+            "root": "apps/survey-e2e",
+            "sourceRoot": "apps/survey-e2e/src",
+            "projectType": "application",
+            "architect": {
+                "e2e": {
+                    "builder": "@nrwl/cypress:cypress",
+                    "options": {
+                        "cypressConfig": "apps/survey-e2e/cypress.json",
+                        "devServerTarget": "survey:serve:development",
+                        "testingType": "e2e",
+                        "tsConfig": "apps/survey-e2e/tsconfig.json"
+                    },
+                    "configurations": {
+                        "production": {
+                            "devServerTarget": "survey:serve:production"
+                        }
+                    }
+                },
+                "lint": {
+                    "builder": "@nrwl/linter:eslint",
+                    "outputs": ["{options.outputFile}"],
+                    "options": {
+                        "lintFilePatterns": ["apps/survey-e2e/**/*.{js,ts}"]
+                    }
+                }
+            },
+            "tags": [],
+            "implicitDependencies": ["survey"]
+        },
         "timetable": {
             "$schema": "../../node_modules/nx/schemas/project-schema.json",
             "projectType": "application",
