chore(survey): add angular schematics to project

--- a/angular.json
+++ b/angular.json
@@ -1629,6 +1629,7 @@
             "tags": []
         },
         "survey": {
+            "$schema": "../../node_modules/nx/schemas/project-schema.json",
             "projectType": "application",
             "root": "apps/survey",
             "sourceRoot": "apps/survey/src",
