--- a/angular.json
+++ b/angular.json
@@ -1637,8 +1637,8 @@
             "architect": {
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
-                    "outputs": ["{options.outputPath}"],
                     "options": {
+                        "baseHref": ".",
                         "outputPath": "dist/apps/survey",
                         "index": "apps/survey/src/index.html",
                         "main": "apps/survey/src/main.ts",
@@ -1646,32 +1646,71 @@
                         "tsConfig": "apps/survey/tsconfig.app.json",
                         "assets": [
                             "apps/survey/src/favicon.ico",
-                            "apps/survey/src/assets"
+                            "apps/survey/src/assets",
+                            {
+                                "glob": "**",
+                                "input": "shared/assets",
+                                "output": "/assets/"
+                            },
+                            {
+                                "glob": "oauth-resp.html",
+                                "input": "node_modules/@placeos/ts-client/dist/",
+                                "output": "/"
+                            }
                         ],
-                        "styles": ["apps/survey/src/styles.css"],
-                        "scripts": []
+                        "styles": [
+                            "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+                            "apps/survey/src/styles.css",
+                            "shared/styles/application.scss",
+                            "shared/styles/custom-element.scss",
+                            "shared/styles/native-element.scss",
+                            "shared/styles/utility.scss"
+                        ],
+                        "scripts": [],
+                        "vendorChunk": true,
+                        "extractLicenses": false,
+                        "buildOptimizer": false,
+                        "sourceMap": true,
+                        "optimization": false,
+                        "namedChunks": true
                     },
                     "configurations": {
                         "production": {
-                            "budgets": [
-                                {
-                                    "type": "initial",
-                                    "maximumWarning": "500kb",
-                                    "maximumError": "1mb"
-                                },
-                                {
-                                    "type": "anyComponentStyle",
-                                    "maximumWarning": "2kb",
-                                    "maximumError": "4kb"
-                                }
-                            ],
                             "fileReplacements": [
+                                {
+                                    "replace": "libs/mocks/src/index.ts",
+                                    "with": "libs/mocks/src/empty.ts"
+                                },
                                 {
                                     "replace": "apps/survey/src/environments/environment.ts",
                                     "with": "apps/survey/src/environments/environment.prod.ts"
+                                },
+                                {
+                                    "replace": "libs/common/src/lib/settings.ts",
+                                    "with": "apps/survey/src/environments/settings.ts"
                                 }
                             ],
-                            "outputHashing": "all"
+                            "optimization": true,
+                            "outputHashing": "all",
+                            "sourceMap": false,
+                            "namedChunks": false,
+                            "extractLicenses": true,
+                            "vendorChunk": false,
+                            "buildOptimizer": true,
+                            "budgets": [
+                                {
+                                    "type": "initial",
+                                    "maximumWarning": "2mb",
+                                    "maximumError": "5mb"
+                                },
+                                {
+                                    "type": "anyComponentStyle",
+                                    "maximumWarning": "6kb",
+                                    "maximumError": "10kb"
+                                }
+                            ],
+                            "serviceWorker": true,
+                            "ngswConfigPath": "apps/survey/ngsw-config.json"
                         },
                         "development": {
                             "buildOptimizer": false,
