--- a/apps/survey/tsconfig.json
+++ b/apps/survey/tsconfig.json
@@ -1,7 +1,6 @@
 {
     "extends": "../../tsconfig.base.json",
     "files": [],
-    "include": [],
     "references": [
         {
             "path": "./tsconfig.app.json"
@@ -15,17 +14,7 @@
     ],
     "compilerOptions": {
         "target": "es2020",
-        "forceConsistentCasingInFileNames": true,
-        "strict": true,
-        "noImplicitOverride": true,
-        "noPropertyAccessFromIndexSignature": true,
-        "noImplicitReturns": true,
-        "noFallthroughCasesInSwitch": true
-    },
-    "angularCompilerOptions": {
-        "enableI18nLegacyMessageIdFormat": false,
-        "strictInjectionParameters": true,
-        "strictInputAccessModifiers": true,
-        "strictTemplates": true
+        "experimentalDecorators": true,
+        "noEmitOnError": true
     }
 }
