--- a/angular.json
+++ b/angular.json
@@ -2345,6 +2345,78 @@
             },
             "tags": [],
             "implicitDependencies": ["workplace"]
+        },
+        "survey-generator": {
+            "projectType": "library",
+            "root": "survey-generator",
+            "sourceRoot": "survey-generator/src",
+            "prefix": "lib",
+            "architect": {
+                "build": {
+                    "builder": "@angular-devkit/build-angular:ng-packagr",
+                    "options": {
+                        "project": "survey-generator/ng-package.json"
+                    },
+                    "configurations": {
+                        "production": {
+                            "tsConfig": "survey-generator/tsconfig.lib.prod.json"
+                        },
+                        "development": {
+                            "tsConfig": "survey-generator/tsconfig.lib.json"
+                        }
+                    },
+                    "defaultConfiguration": "production"
+                },
+                "test": {
+                    "builder": "@angular-devkit/build-angular:karma",
+                    "options": {
+                        "main": "survey-generator/src/test.ts",
+                        "tsConfig": "survey-generator/tsconfig.spec.json",
+                        "karmaConfig": "survey-generator/karma.conf.js"
+                    }
+                }
+            }
+        },
+        "survey-creator": {
+            "$schema": "../../node_modules/nx/schemas/project-schema.json",
+            "projectType": "library",
+            "root": "libs/survey-creator",
+            "sourceRoot": "libs/survey-creator/src",
+            "prefix": "placeos",
+            "architect": {
+                "build": {
+                    "builder": "@angular-devkit/build-angular:ng-packagr",
+                    "options": {
+                        "project": "survey-creator/ng-package.json"
+                    },
+                    "configurations": {
+                        "production": {
+                            "tsConfig": "survey-creator/tsconfig.lib.prod.json"
+                        },
+                        "development": {
+                            "tsConfig": "survey-creator/tsconfig.lib.json"
+                        }
+                    },
+                    "defaultConfiguration": "production"
+                },
+                "test": {
+                    "builder": "@nrwl/jest:jest",
+                    "outputs": ["coverage/libs/assets"],
+                    "options": {
+                        "jestConfig": "libs/assets/jest.config.ts",
+                        "passWithNoTests": true
+                    }
+                },
+                "lint": {
+                    "builder": "@nrwl/linter:eslint",
+                    "options": {
+                        "lintFilePatterns": [
+                            "libs/assets/**/*.ts",
+                            "libs/assets/**/*.html"
+                        ]
+                    }
+                }
+            }
         }
     }
 }
