--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "jest-preset-angular": "11.1.2",
     "marked": "^4.0.10",
     "ng-mocks": "^14.0.1",
+    "ng-packagr": "^14.0.0",
     "nx": "14.5.4",
     "postcss": "^8.4.4",
     "postcss-preset-env": "7.5.0",
