--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -28,7 +28,8 @@
             "@placeos/organisation": ["libs/organisation/src/index.ts"],
             "@placeos/payments": ["libs/payments/src/index.ts"],
             "@placeos/spaces": ["libs/spaces/src/index.ts"],
-            "@placeos/users": ["libs/users/src/index.ts"]
+            "@placeos/users": ["libs/users/src/index.ts"],
+            "@placeos/survey": ["libs/survey-creator/src/index.ts"]
         }
     },
     "exclude": ["node_modules", "tmp"]
