--- a/libs/survey-creator/tsconfig.lib.json
+++ b/libs/survey-creator/tsconfig.lib.json
@@ -1,8 +1,9 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
-    "extends": "../tsconfig.json",
+    "extends": "./tsconfig.json",
     "compilerOptions": {
         "outDir": "../../dist/out-tsc",
+        "target": "es2015",
         "declaration": true,
         "declarationMap": true,
         "inlineSources": true,
