--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "@angular/localize": "14.1.1",
     "@ngneat/spectator": "^11.1.3",
     "@ngneat/tailwind": "^7.0.3",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "@nrwl/cli": "14.5.4",
     "@nrwl/cypress": "14.5.4",
     "@nrwl/eslint-plugin-nx": "14.5.4",
