--- a/apps/survey/tsconfig.editor.json
+++ b/apps/survey/tsconfig.editor.json
@@ -1,6 +1,9 @@
 {
     "extends": "./tsconfig.json",
-    "include": ["**/*.ts"],
+    "include": [
+        "**/*.ts",
+        "../../libs/survey-creator/src/lib/pages/complete-survey.component.ts"
+    ],
     "compilerOptions": {
         "types": ["jest", "node"]
     }
