chore(survey): remove package.json file from Survey-creator lib and install required angular-survey and angular/cdk dependencies in root package.json file as per PR comment

--- a/package.json
+++ b/package.json
@@ -1,107 +1,108 @@
 {
-  "name": "placeos",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "ng": "nx",
-    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main && node ./config/version.js",
-    "nx": "nx",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "nx workspace-lint && ng lint",
-    "e2e": "ng e2e",
-    "affected:apps": "nx affected:apps",
-    "affected:libs": "nx affected:libs",
-    "affected:build": "nx affected:build",
-    "affected:e2e": "nx affected:e2e",
-    "affected:test": "nx affected:test",
-    "affected:lint": "nx affected:lint",
-    "affected:dep-graph": "nx affected:dep-graph",
-    "affected": "nx affected",
-    "format": "nx format:write",
-    "format:write": "nx format:write",
-    "format:check": "nx format:check",
-    "update": "nx migrate latest",
-    "workspace-generator": "nx workspace-generator",
-    "dep-graph": "nx dep-graph",
-    "help": "nx help",
-    "version": "node ./tools/apply-version.js && npx standard-version"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "14.1.1",
-    "@angular/cdk": "14.1.1",
-    "@angular/common": "14.1.1",
-    "@angular/compiler": "14.1.1",
-    "@angular/core": "14.1.1",
-    "@angular/forms": "14.1.1",
-    "@angular/material": "14.1.1",
-    "@angular/platform-browser": "14.1.1",
-    "@angular/platform-browser-dynamic": "14.1.1",
-    "@angular/pwa": "^14.0.3",
-    "@angular/router": "14.1.1",
-    "@angular/service-worker": "14.1.1",
-    "@nrwl/angular": "14.5.4",
-    "qr-scanner": "^1.2.0",
-    "quill": "^1.3.6",
-    "rxjs": "~6.6.3",
-    "survey-angular": "^1.9.47",
-    "tslib": "^2.0.0",
-    "zone.js": "0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "14.1.1",
-    "@angular-eslint/eslint-plugin": "14.0.2",
-    "@angular-eslint/eslint-plugin-template": "14.0.2",
-    "@angular-eslint/template-parser": "14.0.2",
-    "@angular/cli": "~14.0.0",
-    "@angular/compiler-cli": "14.1.1",
-    "@angular/language-service": "14.1.1",
-    "@angular/localize": "14.1.1",
-    "@ngneat/spectator": "^11.1.0",
-    "@ngneat/tailwind": "^7.0.3",
-    "@nrwl/cli": "14.5.4",
-    "@nrwl/cypress": "14.5.4",
-    "@nrwl/eslint-plugin-nx": "14.5.4",
-    "@nrwl/jest": "14.5.4",
-    "@nrwl/linter": "14.5.4",
-    "@nrwl/workspace": "14.5.4",
-    "@placeos/cloud-uploads": "^0.1.2-dev",
-    "@placeos/svg-viewer": "^0.4.0-dev",
-    "@placeos/ts-client": "^3.13.3",
-    "@sentry/angular": "^7.3.0",
-    "@sentry/tracing": "^7.3.0",
-    "@types/jest": "27.4.1",
-    "@types/node": "14.14.33",
-    "@types/office-js": "^1.0.253",
-    "@typescript-eslint/eslint-plugin": "5.24.0",
-    "@typescript-eslint/parser": "5.24.0",
-    "autoprefixer": "^10.4.0",
-    "blob-util": "^2.0.2",
-    "chartist": "^0.11.4",
-    "cypress": "^6.0.1",
-    "date-fns": "^2.19.0",
-    "date-fns-tz": "^1.1.3",
-    "dotenv": "10.0.0",
-    "eslint": "8.15.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
-    "git-describe": "^4.0.4",
-    "jest": "27.5.1",
-    "jest-preset-angular": "11.1.2",
-    "marked": "^4.0.10",
-    "ng-mocks": "^14.0.1",
-    "ng-packagr": "^14.0.0",
-    "nx": "14.5.4",
-    "postcss": "^8.4.4",
-    "postcss-preset-env": "7.5.0",
-    "prettier": "2.7.1",
-    "standard-version": "^9.3.2",
-    "tailwindcss": "^3.0.23",
-    "ts-jest": "27.1.4",
-    "ts-md5": "^1.3.0",
-    "ts-node": "10.8.1",
-    "typescript": "4.7.4"
-  }
+    "name": "placeos",
+    "version": "0.0.0",
+    "license": "MIT",
+    "scripts": {
+        "ng": "nx",
+        "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main && node ./config/version.js",
+        "nx": "nx",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "nx workspace-lint && ng lint",
+        "e2e": "ng e2e",
+        "affected:apps": "nx affected:apps",
+        "affected:libs": "nx affected:libs",
+        "affected:build": "nx affected:build",
+        "affected:e2e": "nx affected:e2e",
+        "affected:test": "nx affected:test",
+        "affected:lint": "nx affected:lint",
+        "affected:dep-graph": "nx affected:dep-graph",
+        "affected": "nx affected",
+        "format": "nx format:write",
+        "format:write": "nx format:write",
+        "format:check": "nx format:check",
+        "update": "nx migrate latest",
+        "workspace-generator": "nx workspace-generator",
+        "dep-graph": "nx dep-graph",
+        "help": "nx help",
+        "version": "node ./tools/apply-version.js && npx standard-version"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "14.1.1",
+        "@angular/cdk": "^14.1.1",
+        "@angular/common": "14.1.1",
+        "@angular/compiler": "14.1.1",
+        "@angular/core": "14.1.1",
+        "@angular/forms": "14.1.1",
+        "@angular/material": "14.1.1",
+        "@angular/platform-browser": "14.1.1",
+        "@angular/platform-browser-dynamic": "14.1.1",
+        "@angular/pwa": "^14.0.3",
+        "@angular/router": "14.1.1",
+        "@angular/service-worker": "14.1.1",
+        "@nrwl/angular": "14.5.4",
+        "qr-scanner": "^1.2.0",
+        "quill": "^1.3.6",
+        "rxjs": "~6.6.3",
+        "survey-angular": "^1.9.47",
+        "survey-angular-ui": "^1.9.63",
+        "tslib": "^2.0.0",
+        "zone.js": "0.11.4"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "14.1.1",
+        "@angular-eslint/eslint-plugin": "14.0.2",
+        "@angular-eslint/eslint-plugin-template": "14.0.2",
+        "@angular-eslint/template-parser": "14.0.2",
+        "@angular/cli": "~14.0.0",
+        "@angular/compiler-cli": "14.1.1",
+        "@angular/language-service": "14.1.1",
+        "@angular/localize": "14.1.1",
+        "@ngneat/spectator": "^11.1.0",
+        "@ngneat/tailwind": "^7.0.3",
+        "@nrwl/cli": "14.5.4",
+        "@nrwl/cypress": "14.5.4",
+        "@nrwl/eslint-plugin-nx": "14.5.4",
+        "@nrwl/jest": "14.5.4",
+        "@nrwl/linter": "14.5.4",
+        "@nrwl/workspace": "14.5.4",
+        "@placeos/cloud-uploads": "^0.1.2-dev",
+        "@placeos/svg-viewer": "^0.4.0-dev",
+        "@placeos/ts-client": "^3.13.3",
+        "@sentry/angular": "^7.3.0",
+        "@sentry/tracing": "^7.3.0",
+        "@types/jest": "27.4.1",
+        "@types/node": "14.14.33",
+        "@types/office-js": "^1.0.253",
+        "@typescript-eslint/eslint-plugin": "5.24.0",
+        "@typescript-eslint/parser": "5.24.0",
+        "autoprefixer": "^10.4.0",
+        "blob-util": "^2.0.2",
+        "chartist": "^0.11.4",
+        "cypress": "^6.0.1",
+        "date-fns": "^2.19.0",
+        "date-fns-tz": "^1.1.3",
+        "dotenv": "10.0.0",
+        "eslint": "8.15.0",
+        "eslint-config-prettier": "8.1.0",
+        "eslint-plugin-cypress": "^2.10.3",
+        "git-describe": "^4.0.4",
+        "jest": "27.5.1",
+        "jest-preset-angular": "11.1.2",
+        "marked": "^4.0.10",
+        "ng-mocks": "^14.0.1",
+        "ng-packagr": "^14.0.0",
+        "nx": "14.5.4",
+        "postcss": "^8.4.4",
+        "postcss-preset-env": "7.5.0",
+        "prettier": "2.7.1",
+        "standard-version": "^9.3.2",
+        "tailwindcss": "^3.0.23",
+        "ts-jest": "27.1.4",
+        "ts-md5": "^1.3.0",
+        "ts-node": "10.8.1",
+        "typescript": "4.7.4"
+    }
 }
