--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "rxjs": "~6.6.3",
         "survey-angular": "^1.9.47",
         "survey-angular-ui": "^1.9.63",
+        "survey-core": "^1.9.63",
         "tslib": "^2.0.0",
         "zone.js": "0.11.4"
     },
