--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -28,6 +28,7 @@
             "@placeos/organisation": ["libs/organisation/src/index.ts"],
             "@placeos/payments": ["libs/payments/src/index.ts"],
             "@placeos/spaces": ["libs/spaces/src/index.ts"],
+            "@placeos/survey-suite": ["libs/survey-suite/src/index.ts"],
             "@placeos/users": ["libs/users/src/index.ts"]
         }
     },
