--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@angular/router": "14.1.1",
     "@angular/service-worker": "14.1.1",
     "@nrwl/angular": "14.5.4",
+    "@placeos/survey-ts-client": "^0.0.5",
     "qr-scanner": "^1.2.0",
     "quill": "^1.3.6",
     "rxjs": "~6.6.3",
