--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,11 +87,11 @@ jobs:
             matrix:
                 package: ${{ fromJSON(needs.install_deps.outputs.affected_units) }}
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v3
 
             - name: Cache node modules
               id: cache
-              uses: actions/cache@v2
+              uses: actions/cache@v3
               with:
                   path: node_modules
                   key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
@@ -100,9 +100,9 @@ jobs:
                       ${{ runner.os }}-build-
                       ${{ runner.os }}-
 
-            - name: Cache nx build cahce
+            - name: Cache nx build cache
               id: cache-nx
-              uses: actions/cache@v2
+              uses: actions/cache@v3
               with:
                   path: node_modules/.cache/nx
                   key: ${{ runner.os }}-nx-${{matrix.package}}-${{ hashFiles('**/package-lock.json') }}
@@ -130,11 +130,11 @@ jobs:
             short_sha: ${{ needs.install_deps.outputs.short_sha }}
         # Steps represent a sequence of tasks that will be executed as part of the job
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v3
 
             - name: Cache node modules
               id: cache
-              uses: actions/cache@v2
+              uses: actions/cache@v3
               with:
                   path: node_modules
                   key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
@@ -143,9 +143,9 @@ jobs:
                       ${{ runner.os }}-build-
                       ${{ runner.os }}-
 
-            - name: Cache nx build cahce
+            - name: Cache nx build cache
               id: cache-nx
-              uses: actions/cache@v2
+              uses: actions/cache@v3
               with:
                   path: node_modules/.cache/nx
                   key: ${{ runner.os }}-nx-${{matrix.package}}-${{ hashFiles('**/package-lock.json') }}
