--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
         "@schematics/angular": "~15.1.0",
         "@sentry/angular": "^7.11.1",
         "@sentry/tracing": "^7.3.0",
+        "@tailwindcss/line-clamp": "^0.4.2",
         "@types/jest": "29.4.0",
         "@types/node": "14.14.33",
         "@types/office-js": "^1.0.253",
