chore: update icon fonts

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "@angular/language-service": "15.2.0",
         "@angular/localize": "15.2.0",
         "@angular/pwa": "^15.0.4",
+        "@material-design-icons/font": "^0.14.3",
         "@ngneat/spectator": "^14.0.0",
         "@ngneat/tailwind": "^7.0.3",
         "@ngx-translate/core": "^14.0.0",
@@ -101,6 +102,7 @@
         "jest-environment-jsdom": "29.4.3",
         "jest-preset-angular": "13.0.0",
         "marked": "^4.1.1",
+        "material-symbols": "^0.5.0",
         "ng-mocks": "^14.6.0",
         "nx": "15.8.1",
         "postcss": "^8.4.4",
