--- a/apps/outlook-addin-e2e/project.json
+++ b/apps/outlook-addin-e2e/project.json
@@ -7,7 +7,7 @@
         "e2e": {
             "executor": "@nrwl/cypress:cypress",
             "options": {
-                "cypressConfig": "apps/outlook-addin-e2e/cypress.json",
+                "cypressConfig": "apps/outlook-addin-e2e/cypress.config.js",
                 "devServerTarget": "outlook-addin:serve",
                 "tsConfig": "apps/outlook-addin-e2e/tsconfig.json"
             },
